[package]
name = "learn_deno_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
deno_ast = { version = "0.27.3", features = ["transpiling"] }
deno_core = "0.197.0"
deno_runtime = "0.121.0"
futures = "0.3.28"
reqwest = "0.11.18"
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt"] }
